force-app/main/default/objects/Scoreboard__c/Scoreboard__c.object-meta.xml
<CustomObject>
    <description>Scoreboard to keep track of the scores of each match</description>
    <label>Scoreboard</label>
    <nameField>
        <displayFormat>SB - {000000000}</displayFormat>
        <label>Scoreboard Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scoreboards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>