force-app/main/default/objects/Scoreboard__c/fields/Match__c.field-meta.xml
<CustomField>
    <fullName>Match__c</fullName>
    <description>The match that this scoreboard is related to.</description>
    <label>Match</label>
    <referenceTo>Match__c</referenceTo>
    <relationshipLabel>Scoreboards</relationshipLabel>
    <relationshipName>Scoreboards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>