force-app/main/default/objects/Scoreboard__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>The score of the team in the match</description>
    <label>Score</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>