force-app/main/default/objects/Scoreboard__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <description>The team whose score is being calculated</description>
    <label>Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Scoreboards</relationshipLabel>
    <relationshipName>Scoreboards</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>